  CHANGES IN BayesFactor VERSION 0.9.9

CHANGES
  *  When sampling Bayes factors, recompute() now increases the precision of BayesFactor objects, rather than simply recomputing them. Precision from new samples is added
  *  Added test for single proportion; see proportionBF()
  *  Added support for contingency tables; see contingencyBF()
  *  Added Hraba and Grant (1970) data set; see ?raceDolls
  *  Added model.matrix method for BayesFactor objects; allows for extracting the design matrix used for an analysis
  *  recompute() now has multicore and callback support, as intended
  *  Refactored t test and meta-t test code
  *  Moved many backend functions to Rcpp from R C API
  *  t test samplers now sample from interval null hypotheses and point null hypotheses where appropriate
  *  fixed bug in in meta t test sampler which wouldn't allow sampling small numbers of MCMC samples


  CHANGES IN BayesFactor VERSION 0.9.8

CHANGES
  *  Fixed bugs in model enumeration code
  *  Fixed bug leading to wrong computation of number of covariate when interactions between continuous variables were included
  *  Corrected typos/old information in the documentation 
  *  Fixed a memory allocation bug that affected computing Bayes factors with lots of data 
  *  Added meta-analytic Bayes factor for t tests (see meta.ttestBF)
  *  Fixed bug in ttestBF that yielded Bayes factor of NaN for very extreme posterior interval probabilities
  *  Fixed several bugs causing infinite integrals; generally improved integration
  *  Added check to ensure no missing data before analyses
  *  Added callbacks for access by third-party interfaces

  CHANGES IN BayesFactor VERSION 0.9.7

CHANGES
  *  Fixed a bug causing posterior sampling of t test to fail when data was defined as integer type
  *  Fixed a bug causing a two-way interaction to sometimes not be included in 3-way ANOVA analyses