@@ -15,9 +15,11 @@
 ##' @param N number of observations per cell or group
 ##' @param J number of cells or groups
 ##' @param rscale numeric prior scale
-##' @return a vector of length 2 containing the computed log(e) Bayes factor
-##'   (against the intercept-only null), along with a proportional error
-##'   estimate on the Bayes factor.
+##' @param simple if \code{TRUE}, return only the Bayes factor
+##' @return If \code{simple} is \code{TRUE}, returns the Bayes factor (against the 
+##' intercept-only null). If \code{FALSE}, the function returns a 
+##' vector of length 2 containing the computed log(e) Bayes factor,
+##' along with a proportional error estimate on the Bayes factor.
 ##' @export
 ##' @keywords htest
 ##' @author Richard D. Morey (\email{richarddmorey@@gmail.com})
@@ -45,13 +47,16 @@
 ##' exp(result[['bf']])
 ##' @seealso \code{\link{integrate}}, \code{\link{aov}}; see \code{\link{lmBF}} for the intended interface to this function, using the full data set.
 
-oneWayAOV.Fstat = function(F,N,J,rscale="medium")
+oneWayAOV.Fstat = function(F, N, J, rscale="medium", simple = FALSE)
 {
   rscale = rpriorValues("allNways","fixed",rscale)
   log.const = marginal.g.oneWay(1,F=F,N=N,J=J,rscale=rscale,log=TRUE)
   integral = integrate(marginal.g.oneWay,lower=0,upper=Inf,F=F,N=N,J=J,rscale=rscale,log.const=log.const)
   properror = exp(log(integral[[2]]) - log(integral[[1]]))
 	bf = log(integral[[1]]) + log.const
-	return(c(bf=bf, properror=properror))
+	if(simple){
+	  return(c(B10=exp(bf)))
+  }else{
+    return(c(bf=bf, properror=properror))
+	}
 }
-
