@@ -18,12 +18,11 @@
 ##' @param nullInterval optional vector of length 2 containing lower and upper bounds of an interval hypothesis to test, in standardized units
 ##' @param rscale numeric prior scale
 ##' @param complement if \code{TRUE}, compute the Bayes factor against the complement of the interval
-##' @return If \code{nullInterval} is defined, then two Bayes factors will be
-##'   computed: The Bayes factor for the interval against the null hypothesis 
-##'   that the standardized effect is 0, and the corresponding Bayes factor for 
-##'   the compliment of the interval. For each Bayes factor, a vector of length
-##'   2 containing the computed log(e) Bayes factor (against the point null),
-##'   along with a proportional error estimate on the Bayes factor is returned.
+##' @param simple if \code{TRUE}, return only the Bayes factor
+##' @return If \code{simple} is \code{TRUE}, returns the Bayes factor (against the 
+##' null). If \code{FALSE}, the function returns a 
+##' vector of length 2 containing the computed log(e) Bayes factor,
+##' along with a proportional error estimate on the Bayes factor.
 ##' @author Richard D. Morey (\email{richarddmorey@@gmail.com}) and Jeffrey N. 
 ##'   Rouder (\email{rouderj@@missouri.edu})
 ##' @keywords htest
@@ -54,7 +53,7 @@
 ##' result <- ttest.tstat(t = -4.0621, n1 = 10)
 ##' exp(result[['bf']])
 
-ttest.tstat=function(t,n1,n2=0,nullInterval=NULL,rscale="medium", complement=FALSE)
+ttest.tstat=function(t,n1,n2=0,nullInterval=NULL,rscale="medium", complement=FALSE, simple = FALSE)
 {
   if(n2){
     rscale = rpriorValues("ttestTwo",,rscale)
@@ -76,8 +75,15 @@ ttest.tstat=function(t,n1,n2=0,nullInterval=NULL,rscale="medium", complement=FAL
   r2=rscale^2
   log.marg.like.0= -(nu+1)/2 * log(1+t^2/(nu))
   if(is.null(nullInterval)){
-    return(meta.t.bf(t,n,nu,rscale=rscale))
+    res = meta.t.bf(t,n,nu,rscale=rscale)
   }else{
-    return(meta.t.bf(t,n,nu,interval=nullInterval,rscale=rscale,complement = complement))
+    res = meta.t.bf(t,n,nu,interval=nullInterval,rscale=rscale,complement = complement)
   }
+  if(simple){
+    return(c(B10=exp(res$bf)))
+  }else{
+    return(res)
+  }
+  
+  
 }
