@@ -1,6 +1,7 @@
   CHANGES IN BayesFactor VERSION 0.9.9
 
 CHANGES
+  *  Added "simple" argument to ttest.tstat, oneWayAOV.Fstat, and linearReg.R2stat; when TRUE, return only the Bayes factor (not the log BF and error)
   *  When sampling Bayes factors, recompute() now increases the precision of BayesFactor objects, rather than simply recomputing them. Precision from new samples is added
   *  Added test for single proportion; see proportionBF()
   *  Added support for contingency tables; see contingencyBF()
